--- a/static/src/scss/components/collections.scss
+++ b/static/src/scss/components/collections.scss
@@ -48,7 +48,6 @@ $font-regular: "co_headline_corpregular", "Arial", sans-serif;
         padding: 0;
     }
     &__inner{
-        @include fr;
         position: relative;
         @include r(1023){
             color: #fff;
@@ -58,6 +57,7 @@ $font-regular: "co_headline_corpregular", "Arial", sans-serif;
         @include rmin(1024){
             margin: 0 auto;
             max-width: 650px;
+            @include fr;
 
             &::after{
                 content: '';
@@ -210,7 +210,7 @@ $font-regular: "co_headline_corpregular", "Arial", sans-serif;
     &__video,
     &__country{
         @include css-lock(12,16,768,1200);
-        @include fr;
+        // @include fr;
         display: inline-flex;
         align-items: center;
         span{
@@ -268,7 +268,7 @@ $font-regular: "co_headline_corpregular", "Arial", sans-serif;
             margin-bottom: 10px;
             font-size: 16px;
             line-height: 1.25;
-            @include fb();
+            @include fr();
             @include rmin(1024){
                 display: none;
             }
@@ -291,6 +291,16 @@ $font-regular: "co_headline_corpregular", "Arial", sans-serif;
         width: 1em;
         height: 1em;
         z-index: 1;
+        @include r(767){
+            &:not(.nk-item__hit_mobile){
+                display: none;
+            }
+        }
+        &_mobile{
+            @include rmin(768){
+                display: none;
+            }
+        }
         & > img{
             width: 100%;
             height: 100%;
@@ -309,7 +319,7 @@ $font-regular: "co_headline_corpregular", "Arial", sans-serif;
         display: inline-block;
         padding: 3px 5px;
         @include css-lock(12,14,768,1200);
-        @include fb();
+        @include fr();
         color: #fff;
         background: #520055;
         border-radius: 3px;
@@ -329,7 +339,7 @@ $font-regular: "co_headline_corpregular", "Arial", sans-serif;
         padding: 13/16*1em 26/16*1em;
         background: linear-gradient(180deg, #FCCD03 0%, #F47E0A 100%);
         border-radius: 5px;
-        @include fb();
+        @include fr();
         @include css-lock(12,16,768,1200);
         color: #fff;
         transition: background-size .3s;
@@ -384,7 +394,7 @@ $font-regular: "co_headline_corpregular", "Arial", sans-serif;
             margin-right: 10px;
         }
         span{
-            @include fr();
+            // @include fr();
             line-height: 16px;
             @include css-lock(12,14,768,1200);
         }
